--- a/src/Frame/Dashboard.form
+++ b/src/Frame/Dashboard.form
@@ -76,6 +76,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Angel33"/>
               </Properties>
+              <AccessibilityProperties>
+                <Property name="AccessibleContext.accessibleDescription" type="java.lang.String" value=""/>
+              </AccessibilityProperties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
                   <AbsoluteConstraints x="140" y="20" width="210" height="70"/>
