--- a/src/Frame/Dashboard.form
+++ b/src/Frame/Dashboard.form
@@ -412,31 +412,10 @@
                   <Color blue="5e" green="5e" red="5e" type="rgb"/>
                 </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="3" rowCount="6">
-                    <Column editable="true" title="Jugador X" type="java.lang.String">
-                      <Data value="     Angel33"/>
-                      <Data value="     Mauricio"/>
-                      <Data value="     Cris"/>
-                      <Data value="     Cris"/>
-                      <Data value="     Angel33"/>
-                      <Data value="     Angel33"/>
-                    </Column>
-                    <Column editable="true" title="Jugador O" type="java.lang.String">
-                      <Data value="     Mauricio"/>
-                      <Data value="     Angel33"/>
-                      <Data value="     Angel33"/>
-                      <Data value="     Angel33"/>
-                      <Data value="     Cris"/>
-                      <Data value="     Mauricio"/>
-                    </Column>
-                    <Column editable="true" title="Resultado" type="java.lang.String">
-                      <Data value="     Victoria"/>
-                      <Data value="     Empate"/>
-                      <Data value="    Empate"/>
-                      <Data value="     Derrota"/>
-                      <Data value="    Victoria"/>
-                      <Data value="    Derrota"/>
-                    </Column>
+                  <Table columnCount="3" rowCount="0">
+                    <Column editable="false" title="Jugador X" type="java.lang.Object"/>
+                    <Column editable="false" title="Jugador O" type="java.lang.Object"/>
+                    <Column editable="false" title="Resultado" type="java.lang.Object"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
